package com.qr_restaurant.table.web.dtos.responses.common;

public record TableDto(
        String id,
        String capacity,
        String status
) {
}
