classDiagram
    class Table
    Table: -String id
    Table: -Integer capacity
    Table: -TableStatus status
    Table ..> TableStatus: status

    class TableStatus
    <<enumeration>> TableStatus
    TableStatus: AVAILABLE
    TableStatus: OCCUPIED
    TableStatus: WAITING_FOR_CLEANING

    class DiningSession
    DiningSession: -String id
    DiningSession: -DateTime startTime
    DiningSession: -DateTime endTime
    DiningSession: -Integer numberOfGuests
    DiningSession: -DiningStatus status
    DiningSession "1" -- "1" Table: has
    DiningSession "1" -- "0..*" Order: contains
    DiningSession ..> DiningStatus: status

    class DiningStatus
    <<enumeration>> DiningStatus
    DiningStatus: ACTIVE
    DiningStatus: WAITING_FOR_CHECK
    DiningStatus: COMPLETED

    class MenuCatalogue
    MenuCatalogue: -String id
    MenuCatalogue: -String name
    MenuCatalogue "1" *-- "0..*" MenuItem: contains

    class MenuItem
    MenuItem: -String id
    MenuItem: -String name
    MenuItem: -Float price
    MenuItem: -String description

    class Order
    Order: -String id
    Order: -OrderStatus status
    Order "1" -- "0..*" OrderItem: contains
    Order ..> OrderStatus: status

    class OrderStatus
    <<enumeration>> OrderStatus
    OrderStatus: PENDING
    OrderStatus: CONFIRMED
    OrderStatus: COMPLETED
    OrderStatus: SERVED
    OrderStatus: CANCELLED

    class OrderItem
    OrderItem: -String id
    OrderItem: -Integer quantity
    OrderItem: -String specialInstructions

    class Staff
    Staff: -String id
    Staff: -String name

    class KitchenStaff
    KitchenStaff --|> Staff

    class Waiter
    Waiter --|> Staff